# vicinae

./: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: ipc-client.hpp  server.cpp
src/lib/common/src/: common.cpp
src/lib/figura/src/: lexer.hpp  parser.hpp
src/lib/glyph/: CMakeLists.txt
src/lib/glyph/src/: emoji-fallback.cpp
src/lib/xdgpp/xdgpp/desktop-entry/: entry.cpp  file.cpp
src/lib/xdgpp/xdgpp/locale/: locale.cpp
src/server/: CMakeLists.txt
src/server/src/: ipc-command-server.cpp  main.cpp  pch.h  server.cpp  vicinae.cpp
src/server/src/config/: config.cpp  config.hpp
src/server/src/extend/: model-deser.cpp
src/server/src/extension/: extension-command-runtime.cpp
src/server/src/extension/manager/: extension-manager.cpp  extension-manager.hpp
src/server/src/extension/services/: file-search-service.hpp
src/server/src/extensions/calculator/: calculator-extension.hpp
src/server/src/internal/: os-release.cpp
src/server/src/internal/db/: database.hpp
src/server/src/internal/pid-file/: pid-file.cpp
src/server/src/internal/program-db/: program-db.cpp
src/server/src/internal/zip/: unzip.cpp
src/server/src/qml/: browse-apps-model.cpp  calc-history-view-host.cpp  config-bridge.hpp  dmenu-model.cpp  general-settings-model.cpp  general-settings-model.hpp  installed-extensions-model.cpp  launcher-window.cpp  root-search-model.cpp  root-search-sources.cpp  theme-list-model.cpp
src/server/src/script/: script-scanner.cpp
src/server/src/theme/: theme-parser.cpp
src/server/src/utils/: environment.hpp  file-list-item.hpp  utils.cpp
(+35 files in other folders)
